# chroma-python-test

./: .env.example  .gitignore  README.md  TODO.md  docker-compose.yml
api/: Dockerfile  config.py  download_models.py  main.py  requirements.txt
api/routers/: chat.py  documents.py
api/services/: chroma_client.py  ingestion.py  ollama_client.py
coding_agent/: Dockerfile  agent.py  config.py  main.py  requirements.txt
coding_agent/routers/: chat.py  ingest.py
coding_agent/services/: chroma_client.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.tsx  FileManager.tsx  TechLevelSelector.tsx
frontend/src/lib/: api.ts
graph_worker/: Dockerfile  config.py  download_models.py  main.py  requirements.txt
graph_worker/routers/: sync.py
graph_worker/services/: extractor.py  neo4j_client.py  scheduler.py
orchestrator/: Dockerfile  agent.py  config.py  download_models.py  main.py  requirements.txt
orchestrator/routers/: chat.py
orchestrator/services/: chroma_client.py  neo4j_client.py
research_agent/: Dockerfile  agent.py  config.py  main.py  requirements.txt
skills/: pyproject.toml
skills/rag_skills/: __init__.py  _chunker.py  docx_ingest.py  github_ingest.py  pdf_ingest.py  url_ingest.py  url_scrape.py  web_search.py  youtube_ingest.py
skills/rag_skills/tests/: test_chunker.py  test_github_ingest.py  test_url_scrape.py  test_web_search.py
