[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-skills"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "strands-agents>=1.0.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "langchain-text-splitters>=0.3.0",
    "tiktoken>=0.9.0",
    "duckduckgo-search>=7.0.0",
]

[project.optional-dependencies]
youtube = ["yt-dlp>=2024.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_skills*"]
